--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ header {
 header h1 {
 	margin-top:30px;
 	margin-left: 7%;
-	font-size: 3em;
+	font-size: 4vw;
 	font-family: sans-serif, helvetica;
 }
 
@@ -41,15 +41,36 @@ header p {
 
 
 #colorPicker {
-	position: absolute;
+	position: fixed;
+	width: 200px;
+	background-color: #aaa;
+	text-align: center;
+	font-family: sans-serif, helvetica;
+	padding: 20px 40px;
+/* 	border: 1px solid black; */
+	border-radius: 10px;
+	box-shadow: 3px 3px 5px 0 black;
+	color: white;
 }
 
-#addColor {
-	bottom: 0;
+#colorPicker button {
+	padding: 3px 5px;
+	margin: 10px 3px;
+	height: 35px;
+	border: 1px solid white;
+	border-radius: 10px;
+	display: inline-block;
+}
+
+#colorPicker input {
+	margin-top: 20px;
+}
+
+#addColorPanel {
 	text-align: center;
 }
 
-#addColor span {
+#addColorPanel span {
 	color: white;
 	font-size: 4.6vw;
 	cursor: pointer;
@@ -63,10 +84,11 @@ header p {
 
 /* Canvas Styling */
 #canvas {
-	border: 1px solid black;
-	margin: 0 5% 0 15%;
+	border: 2px solid black;
+	margin: 0 auto;
 	border-radius: 10px;
 	overflow: hidden;
+	max-width: 1080px;
 }
 
 .pixel {
@@ -93,22 +115,45 @@ header p {
 }
 
 .pop_up {
-	
+	position: fixed;
+	top:0;
+	right: 0;
 }
 
 .window {
 	background-color: white;
 	width: 45%;
-	margin: 30% auto 0 auto;
-	border: 10px solid black;
-	border-radius: 10px;
-	padding: 10%;
+	max-width: 500px;
+	margin: 10% auto 0 auto;
+	box-shadow: 3px 3px 5px 2px;
+	border-radius: 10%;
+	padding: 3% 10%;
 }
 
 .window h2 {
-	font-size: 5vw;
+	font-size: 3.5vw;
 	font-family: sans-serif, helvetica;
 	margin-bottom: 20px;
+}
+
+.window input {
+/* 	border: 1px dashed black; */
+	border: none;
+	box-sizing: border-box;
+	border-radius: 10px;
+	padding: 10px;
+	margin: 1%;
+	width: 20%;
+	text-align: center;
+	font-size: 2em;
+	font-family: sans-serif, helvetica;
+	box-shadow: inset 0 0 1px 1px black;
+}
+
+.window label {
+	text-align: center;
+	font-size: 1.7em;
+	font-family: sans-serif, helvetica;
 }
 
 .window button {
@@ -124,4 +169,5 @@ header p {
 
 #colorPicker {
 	display: none;
+	
 }
